Fix environment variables for consistency with server.js
- Rename APP_SESSION_SECRET to SESSION_SECRET
- Rename OIDC_CLIENT_ID to CLIENT_ID
- Rename OIDC_CLIENT_SECRET to CLIENT_SECRET
- Remove OIDC_ISSUER and OIDC_REDIRECT_URI (not used in server.js)
- Add KEYCLOAK_REALM=sso-demo
- Add NODE_ENV=development
- Add LOG_LEVEL=INFO for monitoring consumer

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ KEYCLOAK_DB_PORT=5432
 KEYCLOAK_HOSTNAME=localhost
 KEYCLOAK_HTTP_PORT=8080
 KEYCLOAK_HTTPS_PORT=8443
+KEYCLOAK_REALM=sso-demo
 
 # ========================================
 # POSTGRESQL CONFIGURATION
@@ -37,14 +38,15 @@ LDAP_TLS_PORT=636
 # DUMMY APP CONFIGURATION (Node.js)
 # ========================================
 APP_PORT=3000
-APP_SESSION_SECRET=CHANGE_ME_IN_PRODUCTION
-OIDC_CLIENT_ID=dummy-app
-OIDC_CLIENT_SECRET=CHANGE_ME_IN_PRODUCTION
-OIDC_ISSUER=http://localhost:8080/realms/sso-demo
-OIDC_REDIRECT_URI=http://localhost:3000/callback
+SESSION_SECRET=CHANGE_ME_IN_PRODUCTION
+CLIENT_ID=dummy-app
+CLIENT_SECRET=CHANGE_ME_IN_PRODUCTION
+NODE_ENV=development
+
+
 
 # ========================================
-# KAFKA CONFIGURATION
+
 # ========================================
 KAFKA_BROKER=kafka:9092
 KAFKA_TOPIC_KEYCLOAK_EVENTS=keycloak-events
@@ -66,6 +68,11 @@ KIBANA_PORT=5601
 
 # ========================================
 # ENVIRONMENT
+# ==============
+
 # ========================================
+# MONITORING CONSUMER
+# ========================================
+LOG_LEVEL=INFO
 ENVIRONMENT=development
 DEBUG=true
