Enhance .env.example with local development notes
Added local development configuration comments to .env.example

--- a/dummy-app/.env.example
+++ b/dummy-app/.env.example
@@ -1,3 +1,10 @@
+# ========================================
+# ⚠️ CONFIGURATION POUR DÉVELOPPEMENT LOCAL
+# ========================================
+# Ce fichier est utilisé pour lancer la dummy-app EN LOCAL avec Node.js (npm run dev)
+# Pour Docker, utilisez le fichier /.env.example à la racine du projet
+#
+
 # Keycloak Configuration
 KEYCLOAK_URL=http://localhost:8080
 KEYCLOAK_REALM=sso-demo
