Update .env.example with Docker Compose instructions
Added configuration comments for Docker Compose.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 # ========================================
+# ⚠️ CONFIGURATION POUR DOCKER COMPOSE
+# ========================================
+# Ce fichier contient les variables d'environnement pour docker-compose.dev.yml
+# Les noms d'hôtes utilisent les noms de services Docker (postgres, keycloak, kafka, etc.)
+# Pour développement local Node.js, voir /dummy-app/.env.example
+#
+
+# ========================================
 # KEYCLOAK CONFIGURATION
 # ========================================
 KEYCLOAK_ADMIN=admin
