Add extra_hosts configuration for keycloak service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -177,6 +177,8 @@ services:
         condition: service_healthy
     networks:
       - sso-network
+          extra_hosts:
+                - "localhost:host-gateway"
 
   # ================================
   # Kafka Consumer (Python - Monitoring)
