--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -51,9 +51,10 @@ services:
       - sso-network
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/health/ready || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      interval: 60s
+      timeout: 20s
+      retries: 10
+      start_period: 120s
 
   # ================================
   # OpenLDAP Server
