--- a/docker-compose-clean.yml
+++ b/docker-compose-clean.yml
@@ -1,8 +1,6 @@
 version: '3.8'
 services:
-  # ================================
   # PostgreSQL Database
-  # ================================
   postgres:
     image: postgres:15-alpine
     container_name: sso-postgres
@@ -22,9 +20,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # ================================
   # Keycloak SSO Server
-  # ================================
   keycloak:
     image: quay.io/keycloak/keycloak:23.0
     container_name: sso-keycloak
@@ -51,14 +47,11 @@ services:
       - sso-network
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/health/ready || exit 1"]
-      interval: 60s
-      timeout: 20s
-      retries: 15
-      start_period: 120s
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
-  # ================================
   # OpenLDAP Server
-  # ================================
   openldap:
     image: osixia/openldap:1.5.0
     container_name: sso-openldap
@@ -77,9 +70,7 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # phpLDAPadmin (LDAP Management UI)
-  # ================================
   phpldapadmin:
     image: osixia/phpldapadmin:0.9.0
     container_name: sso-phpldapadmin
@@ -93,9 +84,7 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # Zookeeper (for Kafka)
-  # ================================
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: sso-zookeeper
@@ -105,9 +94,7 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # Kafka Message Broker
-  # ================================
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: sso-kafka
@@ -124,9 +111,7 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # Elasticsearch (Logs Storage)
-  # ================================
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
     container_name: sso-elasticsearch
@@ -141,9 +126,7 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # Kibana (Logs Visualization)
-  # ================================
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.0
     container_name: sso-kibana
@@ -156,34 +139,30 @@ services:
     networks:
       - sso-network
 
-  # ================================
   # Dummy App (Node.js OIDC Client)
-  # ================================
   dummy-app:
     build: ./dummy-app
     container_name: sso-dummy-app
     environment:
-      KEYCLOAK_URL: ${KEYCLOAK_URL:-dummy-app}
+      KEYCLOAK_URL: http://localhost:8080
       KEYCLOAK_REALM: ${KEYCLOAK_REALM:-sso-demo}
       CLIENT_ID: ${CLIENT_ID:-dummy-app}
       CLIENT_SECRET: ${CLIENT_SECRET}
       PORT: ${APP_PORT:-3000}
       SESSION_SECRET: ${SESSION_SECRET}
       NODE_ENV: ${NODE_ENV:-development}
-    ports:
+      ports:
       - "${APP_PORT:-3000}:3000"
     depends_on:
-      - keycloak
+      keycloak:
+        condition: service_healthy
     networks:
       - sso-network
     extra_hosts:
       - "keycloak:host-gateway"
-
-  # ================================
   # Kafka Consumer (Python - Monitoring)
-  # ================================
   kafka-consumer:
-    build: ./monitoring
+      build: ./monitoring
     container_name: sso-kafka-consumer
     environment:
       KAFKA_BROKER: ${KAFKA_BROKER:-kafka:9092}
