Update project documentation and application code

--- a/.env.example
+++ b/.env.example
@@ -56,16 +56,15 @@ NODE_ENV=development
 # ========================================
 
 # ========================================
-KAFKA_BROKER=kafka:9092
-KAFKA_TOPIC_KEYCLOAK_EVENTS=keycloak-events
-KAFKA_TOPIC_APP_LOGS=app-logs
+# Kafka / Messaging
+KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+KAFKA_TOPIC=keycloak-events
 KAFKA_GROUP_ID=sso-monitoring
 
 # ========================================
-# ELASTICSEARCH CONFIGURATION
-# ========================================
-ELASTIC_HOST=elasticsearch
-ELASTIC_PORT=9200
+# Elasticsearch configuration (URL form)
+# Use full URL so services and clients are consistent
+ELASTICSEARCH_HOST=http://elasticsearch:9200
 ELASTIC_USER=elastic
 ELASTIC_PASSWORD=CHANGE_ME_IN_PRODUCTION
 
