--- a/dummy-app/.env.example
+++ b/dummy-app/.env.example
@@ -6,7 +6,8 @@
 #
 
 # Keycloak Configuration
-KEYCLOAK_URL=http://localhost:8080
+# When running in Docker, point to the Keycloak service name
+KEYCLOAK_URL=http://keycloak:8080
 KEYCLOAK_REALM=sso-demo
 CLIENT_ID=dummy-app
 CLIENT_SECRET=your-client-secret-here
