--- a/dummy-app/Dockerfile
+++ b/dummy-app/Dockerfile
@@ -1,39 +1,23 @@
-# Multi-stage build for production-ready Node.js app
+# Build stage
 FROM node:18-alpine AS builder
-
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install --omit=dev
-# Copy application code
-COPY . .
 
-# Final stage - minimal runtime image
+# Runtime stage
 FROM node:18-alpine
-
 WORKDIR /app
 
-# Copy from builder stage
+# Copier les dépendances et fichiers de la build
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/src ./src
-COPY --from=builder /app/public ./public
 
-# Create non-root user for security
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001
+# Copier server.js et public/ (pas de src/)
+COPY server.js ./
+COPY public ./public
 
-USER nodejs
-
-# Expose port
+# Exposer le port
 EXPOSE 3000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
-
-# Start application
-CMD ["npm", "start"]
+# Lancer l'app
+CMD ["node", "server.js"]
