--- a/dummy-app/package.json
+++ b/dummy-app/package.json
@@ -2,10 +2,10 @@
   "name": "sso-dummy-app",
   "version": "1.0.0",
   "description": "Dummy App SSO avec Keycloak OIDC",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
