Fix environment variables in .env.example for consistency
Resolves inconsistencies between .env.example, docker-compose.dev.yml, and application code:

- Added KEYCLOAK_URL=http://keycloak:8080 (required by dummy-app/server.js)
- Added CALLBACK_URL for dummy-app OAuth flow
- Renamed KAFKA_BROKER to KAFKA_BOOTSTRAP_SERVERS (matches consumer.py)
- Renamed KAFKA_TOPIC_KEYCLOAK_EVENTS to KAFKA_TOPIC (matches consumer.py)
- Added ELASTICSEARCH_INDEX for consumer
- Added ELASTIC_PORT=9200 (used in docker-compose.dev.yml)
- Reorganized sections for better clarity

All environment variables now match their usage in:
- monitoring/consumer.py
- dummy-app/server.js
- docker-compose.dev.yml

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@
 # Les noms d'hôtes utilisent les noms de services Docker (postgres, keycloak, kafka, etc.)
 # Pour développement local Node.js, voir /dummy-app/.env.example
 #
-
 # ========================================
 # KEYCLOAK CONFIGURATION
 # ========================================
@@ -45,26 +44,29 @@ LDAP_TLS_PORT=636
 # ========================================
 # DUMMY APP CONFIGURATION (Node.js)
 # ========================================
+# ⚠️ KEYCLOAK_URL: URL pour que l'app communique avec Keycloak (hostname Docker)
+KEYCLOAK_URL=http://keycloak:8080
+
 APP_PORT=3000
 SESSION_SECRET=CHANGE_ME_IN_PRODUCTION
 CLIENT_ID=dummy-app
 CLIENT_SECRET=CHANGE_ME_IN_PRODUCTION
+CALLBACK_URL=http://localhost:3000/callback
 NODE_ENV=development
 
-
-
 # ========================================
-
+# KAFKA / MESSAGING
 # ========================================
-# Kafka / Messaging
 KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 KAFKA_TOPIC=keycloak-events
 KAFKA_GROUP_ID=sso-monitoring
 
 # ========================================
-# Elasticsearch configuration (URL form)
-# Use full URL so services and clients are consistent
+# ELASTICSEARCH CONFIGURATION
+# ========================================
 ELASTICSEARCH_HOST=http://elasticsearch:9200
+ELASTICSEARCH_INDEX=sso-logs
+ELASTIC_PORT=9200
 ELASTIC_USER=elastic
 ELASTIC_PASSWORD=CHANGE_ME_IN_PRODUCTION
 
@@ -74,12 +76,12 @@ ELASTIC_PASSWORD=CHANGE_ME_IN_PRODUCTION
 KIBANA_PORT=5601
 
 # ========================================
-# ENVIRONMENT
-# ==============
-
-# ========================================
 # MONITORING CONSUMER
 # ========================================
 LOG_LEVEL=INFO
+
+# ========================================
+# ENVIRONMENT
+# ========================================
 ENVIRONMENT=development
 DEBUG=true
